syntax = "proto3";
package sec04;

option java_package = "com.grpc_playground.grcp_playgroud.model.sec04.common";
option java_multiple_files = true;


message Address {
  string street = 1;
  string city = 2;
  string state = 3;
}