syntax = "proto3";
package sec02;

option java_package = "com.grpc_playground.grcp_playgroud.model.sec04";
option java_multiple_files = true;
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

message WrapperExample {
  google.protobuf.Int32Value age = 1;
  google.protobuf.Timestamp createdAt = 2;
}